// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TypeAnswerOptions > reflects external values on rerender without remounting inputs (snapshots) 1`] = `
<div>
  <div
    class="optionsContainer"
  >
    <div
      class="option"
    >
      <div
        class="content"
      >
        <input
          data-testid="input-type-answer-option-0-textfield"
          id="type-answer-option-0-textfield"
          placeholder="Option 1"
          value="One"
        />
      </div>
    </div>
    <div
      class="option"
    >
      <div
        class="content"
      >
        <input
          data-testid="input-type-answer-option-1-textfield"
          id="type-answer-option-1-textfield"
          placeholder="Option 2"
          value=""
        />
      </div>
    </div>
    <div
      class="option"
    >
      <div
        class="content"
      >
        <input
          data-testid="input-type-answer-option-2-textfield"
          id="type-answer-option-2-textfield"
          placeholder="Option 3"
          value=""
        />
      </div>
    </div>
    <div
      class="option"
    >
      <div
        class="content"
      >
        <input
          data-testid="input-type-answer-option-3-textfield"
          id="type-answer-option-3-textfield"
          placeholder="Option 4"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TypeAnswerOptions > reflects external values on rerender without remounting inputs (snapshots) 2`] = `
<div>
  <div
    class="optionsContainer"
  >
    <div
      class="option"
    >
      <div
        class="content"
      >
        <input
          data-testid="input-type-answer-option-0-textfield"
          id="type-answer-option-0-textfield"
          placeholder="Option 1"
          value="One"
        />
      </div>
    </div>
    <div
      class="option"
    >
      <div
        class="content"
      >
        <input
          data-testid="input-type-answer-option-1-textfield"
          id="type-answer-option-1-textfield"
          placeholder="Option 2"
          value="Two"
        />
      </div>
    </div>
    <div
      class="option"
    >
      <div
        class="content"
      >
        <input
          data-testid="input-type-answer-option-2-textfield"
          id="type-answer-option-2-textfield"
          placeholder="Option 3"
          value="Three"
        />
      </div>
    </div>
    <div
      class="option"
    >
      <div
        class="content"
      >
        <input
          data-testid="input-type-answer-option-3-textfield"
          id="type-answer-option-3-textfield"
          placeholder="Option 4"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TypeAnswerOptions > renders and matches snapshot 1`] = `
<div>
  <div
    class="optionsContainer"
  >
    <div
      class="option"
    >
      <div
        class="content"
      >
        <input
          data-testid="input-type-answer-option-0-textfield"
          id="type-answer-option-0-textfield"
          placeholder="Option 1"
          value=""
        />
      </div>
    </div>
    <div
      class="option"
    >
      <div
        class="content"
      >
        <input
          data-testid="input-type-answer-option-1-textfield"
          id="type-answer-option-1-textfield"
          placeholder="Option 2"
          value=""
        />
      </div>
    </div>
    <div
      class="option"
    >
      <div
        class="content"
      >
        <input
          data-testid="input-type-answer-option-2-textfield"
          id="type-answer-option-2-textfield"
          placeholder="Option 3"
          value=""
        />
      </div>
    </div>
    <div
      class="option"
    >
      <div
        class="content"
      >
        <input
          data-testid="input-type-answer-option-3-textfield"
          id="type-answer-option-3-textfield"
          placeholder="Option 4"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;
